<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="航点属性配置"
        android:textSize="20dp">

    </TextView>
    <!--    高度配置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="高度：">

        </TextView>

        <EditText
            android:id="@+id/rg_Altitude"
            android:layout_width="40dp"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>
    <!--    速度配置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="速度：">

        </TextView>

        <RadioGroup
            android:id="@+id/rg_Speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lowSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lowSpeed" />

            <RadioButton
                android:id="@+id/midSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/midSpeed" />

            <RadioButton
                android:id="@+id/highSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highSpeed" />


        </RadioGroup>
    </LinearLayout>

<!--    结束后动作-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="结束后动作："
        />

    </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/rg_ActionAfterFinished"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center_horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/finishNone"
            android:text="无"/>
        <RadioButton
            android:id="@+id/finishGoHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="回家"/>
        <RadioButton
            android:id="@+id/finishAutoLanding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="自动降落"/>
        <RadioButton
            android:id="@+id/finishToFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="回到起点"/>
    </RadioGroup>
</LinearLayout>

<!--朝向配置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="朝向"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rg_Heading"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
<!--                    自动：朝向下一个航点-->
            <RadioButton
                android:id="@+id/headingNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto"/>
            <RadioButton
                android:id="@+id/headingInitial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/initial"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/headingRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/RC_Control"/>
                    <RadioButton
                        android:id="@+id/headingWP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/use_waypoint"/>
                </LinearLayout>
            </LinearLayout>
        </RadioGroup>
    </LinearLayout>

<!--    去往第一个航点配置-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="去往第一个航点模式："/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/go_to_first_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/rb_safely"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="安全模式"/>

            <RadioButton
                android:id="@+id/rb_p2p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="点对点模式"/>
        </RadioGroup>
    </LinearLayout>


</LinearLayout>